--- a/my-project/src/app/components/nav/nav.component.html
+++ b/my-project/src/app/components/nav/nav.component.html
@@ -18,10 +18,9 @@
     <button (click)="toggleMenu()">Close</button>
     <ul>
       <li><a routerLink="home">All</a></li>
-      <li *ngFor="let item of categories" >
-        <a [routerLink]="['/category', item.id]">{{ item.name}}</a>
+      <li *ngFor="let item of categories">
+        <a [routerLink]="['/category', item.id]">{{ item.name }}</a>
       </li>
-      <li><a href="">Electronics</a></li>
     </ul>
   </div>
 </div>
@@ -32,11 +31,10 @@
         <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
       </a>
       <ul>
-        <li><a routerLink="home">All</a></li>
-        <li *ngFor="let item of categories" >
-          <a routerLinkActive="active" [routerLink]="['/category', item.id]">{{ item.name}}</a>
+        <li><a routerLinkActive="active" routerLink="home">All</a></li>
+        <li *ngFor="let item of categories">
+          <a routerLinkActive="active" [routerLink]="['/category', item.id]">{{ item.name }}</a>
         </li>
-        <li><a href="">Electronics</a></li>
       </ul>
     </nav>
     <div class="info">
